Respond to most deprecation warnings from Java runtime (up to Java 9).
The motivation is to reduce noise in the build so we can see when
things go wrong.

Although widespread, all are one of 2 simple types. Class.newInstance
becomes Class.getDeclaredConstructor().newInstance(), and for a
primitive wrapper T.valueOf(x) is preferred to new T(x).